# Sampark_GENAPAC

./: .dockerignore  .env  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  GServices.md  HACKATHON_REPORT.md  Project.md  READINESS.MD  README.md  TPT.md  clean_git.bat  convert_google.md  demo.md  entrypoint.sh  gtools.md  improvemntsss.txt  pyproject.toml  roadmap.md  run.sh  start-demo.bat  system_design.md
.github/workflows/: ci-cd.yml  docker.yml
.hypothesis/tmp/: tmp06obk3dr  tmp8yl95205  tmpfr8c749b  tmpqqhd975l  tmpzyj2cq7m
.kiro/specs/sampark-ai-platform/: .config.kiro  design.md  requirements.md  tasks.md
agents/: __init__.py  adk_sampark_pipeline.py  analytics_agent.py  checkpointing.py  data_intelligence_agent.py  graph.py  intake_agent.py  notification_agent.py  prediction_agent.py  recommendation_agent.py  resume.py  retry.py  state.py  validation_agent.py  workflow_agent.py
agents/tests/: __init__.py  test_analytics_agent.py  test_analytics_agent_pbt.py  test_data_intelligence_agent.py  test_intake_agent.py  test_intake_agent_pbt.py  test_notification_agent.py  test_notification_agent_pbt.py  test_prediction_agent.py  test_prediction_agent_pbt.py  test_recommendation_agent.py  test_recommendation_agent_pbt.py  test_supervisor_router.py  test_supervisor_router_pbt.py  test_validation_agent.py  test_validation_agent_pbt.py  test_workflow_agent.py  test_workflow_agent_pbt.py
backend/: Dockerfile  __init__.py  config.py  main.py  middleware.py
backend/tests/: test_admin_api.py  test_bq_performance.py  test_dashboard_api.py  test_e2e.py  test_gateway.py  test_gateway_pbt.py
data/: sampark.db
evaluation/: README.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  theme.md
frontend/src/: App.jsx  ISSUES.MD  api.js  index.css  index.css.append
functions/: escalation.py  health_score.py
functions/tests/: test_health_score.py  test_health_score_pbt.py
infra/: README.md  bigquery.tf  cloud_run.tf  pubsub.tf  secrets.tf  variables.tf
langgraph/: Dockerfile
rag/: __init__.py  generator.py  ingestor.py  retriever.py
rag/tests/: test_rag_pipeline.py  test_rag_pipeline_pbt.py
scripts/: setup_rag_corpus.py
sql/: sampark_dashboard_view.sql
tools/: __init__.py  bigquery_tool.py  embeddings_tool.py  firestore_tool.py  maps_tool.py  notification_tool.py  speech_tool.py  sqlite_tool.py  vertex_tool.py  vision_tool.py  weather_tool.py
tools/tests/: __init__.py  test_bigquery_tool.py  test_firestore_tool.py  test_firestore_tool_local.py  test_maps_tool.py  test_vision_speech_notification_tools.py  test_vision_tool.py  test_weather_tool.py
