[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sampark-ai-platform"
version = "0.2.0"
description = "Sampark AI Decision Intelligence Platform — ADK-powered, RAG-grounded system on Google Cloud"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # ── Web framework ──
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-multipart",

    # ── Google ADK (replaces langgraph + langchain) ──
    "google-adk",

    # ── Google AI SDK (replaces google-generativeai) ──
    "google-genai",

    # ── Google Cloud services ──
    "google-cloud-firestore",
    "google-cloud-bigquery",
    "google-cloud-pubsub",
    "google-cloud-storage",
    "google-cloud-aiplatform",       # Vertex AI RAG Engine + Vector Search
    "google-cloud-speech",           # Cloud Speech-to-Text v2
    "google-cloud-vision",           # Cloud Vision API
    "google-cloud-translate",        # Cloud Translation API
    "google-cloud-language",         # Natural Language API
    "google-cloud-logging",          # Cloud Logging
    "firebase-admin",                # Firebase Authentication + FCM

    # ── HTTP & utilities ──
    "httpx",
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.131.15",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend", "agents", "tools"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "backend", "tools", "functions"]

