[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sampark-ai-platform"
version = "0.1.0"
description = "Sampark AI Decision Intelligence Platform — multi-agent, RAG-grounded system powered by Google AI Studio (FREE)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-multipart",

    # Auth
    "pyjwt",
    "bcrypt",

    # AI / Orchestration
    "langgraph",
    "langchain",

    # Google AI Studio (FREE - replaces Vertex AI)
    "google-generativeai",

    # Vector Search (FREE - replaces Vertex AI Vector Search)
    "faiss-cpu",
    "numpy",

    # Local Databases (FREE - replaces Firestore + BigQuery)
    "aiosqlite",

    # Analytics (FREE - replaces BigQuery)
    "duckdb",

    # HTTP
    "httpx",

    # PDF Parsing
    "pypdf",

    # Notifications (free tiers available)
    "sendgrid",
    "twilio",
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.131.15",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend", "agents", "tools", "rag", "functions"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "backend", "tools", "rag", "functions"]
