[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sampark-ai-platform"
version = "0.1.0"
description = "Sampark AI Decision Intelligence Platform — multi-agent, RAG-grounded system on Google Cloud"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "google-cloud-firestore>=2.13.0",
    "google-cloud-bigquery>=3.12.0",
    "google-cloud-pubsub>=2.18.0",
    "google-cloud-storage>=2.10.0",
    "google-cloud-aiplatform>=1.35.0",
    "google-cloud-speech>=2.21.0",
    "sendgrid>=6.10.0",
    "twilio>=8.10.0",
    "httpx>=0.25.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.7",
    "google-generativeai>=0.3.0"
]
[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "hypothesis==6.131.15",
    "pytest-asyncio==0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend", "agents", "tools", "rag", "functions"]

[tool.hatch.build.targets.wheel]
packages = ["agents", "backend", "tools", "rag", "functions"]


